--- a/manifest-prod.yml
+++ b/manifest-prod.yml
@@ -1,5 +1,5 @@
 ---
 applications:
-- name: mds-spring-music
+- name: spring-music
   memory: 1G
-  buildpack: java_buildpack
+  buildpack: java_buildpack_offline
