--- a/manifest-test.yml
+++ b/manifest-test.yml
@@ -1,5 +1,5 @@
 ---
 applications:
-- name: mds-spring-music-test
+- name: spring-music-test
   memory: 1G
-  buildpack: java_buildpack
+  buildpack: java_buildpack_offline
