--- a/manifest-uat.yml
+++ b/manifest-uat.yml
@@ -1,5 +1,5 @@
 ---
 applications:
-- name: mds-spring-music-uat
+- name: spring-music-uat
   memory: 1G
-  buildpack: java_buildpack
+  buildpack: java_buildpack_offline
