--- a/ci/tasks/restart.yml
+++ b/ci/tasks/restart.yml
@@ -10,13 +10,12 @@ inputs:
   - name: git-repo
   - name: version
 
+outputs:
+  - name: blue-green-output
 run:
-  path: git-repo/ci/tasks/restart.sh
+  path: git-repo/ci/tasks/restart-artifactory.sh
 
 params:
   GIT_REPO:
   PASSWORD:
-  S3_BUCKET:
-  S3_ACCESS_KEY_ID:
-  S3_SECRET_ACCESS_KEY:
-  S3_BLUE_GREEN_FILE:
+  ARTIFACTORY_COLOR_REGEX:
