--- a/ci/tasks/bootstrap.yml
+++ b/ci/tasks/bootstrap.yml
@@ -6,6 +6,9 @@ image_resource:
   source:
     repository: brianbyers/concourse-git
 
+inputs:
+  - name: git-repo
+  
 outputs:
   - name: blue-green-output
 run:
