updated example params to add new fields

--- a/example-pipeline-params.yml
+++ b/example-pipeline-params.yml
@@ -1,18 +1,24 @@
-GIT_REPO: git@github.com:bbyers-pivotal/concourse-spring-music.git
-GIT_BRANCH: master
-CF_API: https://api.local.pcfdev.io
-CF_USER: admin
-CF_PASS: admin
-CF_DEV_ORG: pcfdev-org
-CF_DEV_SPACE: development
-CF_TEST_ORG: pcfdev-org
+GIT_REPO: git@github.com:bbyers-pivotal/s1p-concourse-spring-music.git
+GIT_REPO_URL: github.com/bbyers-pivotal/s1p-concourse-spring-music.git
+CF_API: https://api.run.pivotal.io
+CF_DEV_ORG: some-org
+CF_DEV_SPACE: dev
+CF_TEST_ORG: some-org
 CF_TEST_SPACE: test
-CF_UAT_ORG: pcfdev-org
+CF_UAT_ORG: some-org
 CF_UAT_SPACE: uat
-CF_PROD_ORG: pcfdev-org
+CF_PROD_ORG: some-org
 CF_PROD_SPACE: prod
-S3_ACCESS_KEY_ID: REPLACE_ME
-S3_SECRET_ACCESS_KEY: REPLACE_ME
-S3_BUCKET: REPLACE_ME
-MUSIC_PRIVATE_KEY: |
-
+CF_USER: someuser@gmail.com
+CF_PASS: supersecretpassword
+SKIP_SSL_VALIDATION: true
+ARTIFACTORY_URL: http://artifactory.mydomain.com/artifactory
+ARTIFACTORY_USER: admin
+ARTIFACTORY_PASS: mypassword
+ARTIFACTORY_REPO: /gradle-release-local/spring-music
+ARTIFACTORY_REGEX: spring-music-(?<version>.*).jar
+ARTIFACTORY_COLOR_REGEX: spring-music-color-(?<version>.*)
+ARTIFACTORY_COLOR_FILENAME: spring-music-color-1.0.0
+GIT_PERSONAL_ACCESS_TOKEN: githubPersonalAccessToken
+VERIFY_URL: https://spring-music-test.cfapps.io
+GIT_PRIVATE_KEY: |
